# agent_ai_tutorials

./: .gitignore  README.md  mkdocs.yml
docs/: index.md
docs/agent_ai/: 1_intro.md  2_mcp.md  3_agenticframeworks.md  4_lang.md
docs/agent_ai/tutorials/first_agent/: .env.sample  README.md  memory.json  requirements.txt  step0_llm.py  step1_condition.py  step2_tools.py  step3_agent.py
docs/agent_ai/tutorials/first_agent/utils/: agent.py  condition.py  config.py  llm.py  memory.py  planner.py  serpapi.py
docs/agent_ai/tutorials/firstagent/: README.md  memory.json  pyproject.toml  requirements.txt
docs/agent_ai/tutorials/firstagent/agent_talk/: __init__.py  agent.py  planner.py
docs/agent_ai/tutorials/firstagent/agent_talk/steps/: step0_llm.py  step1_condition.py  step2_tools.py  step4_agent.py
docs/agent_ai/tutorials/firstagent/agent_talk/tools/: serpapi.py
docs/agent_ai/tutorials/firstagent/tests/: test_smoke.py
docs/agent_ai/tutorials/langchainproject/: pyproject.toml  readme.md
docs/agent_ai/tutorials/langchainproject/notebooks/: 1_langchain.ipynb  2_websearch.ipynb  3_personalchef.ipynb  4_multiagent.ipynb
