[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-talk-2025"
version = "0.1.0"
description = "Python port of the agent-talk-2025 demo repository"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "openai>=1.40.0",
  "python-dotenv>=1.0.1",
  "requests>=2.31.0",
  "pydantic>=2.7.0",
  "rich>=13.7.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]

[project.scripts]
step0-llm = "agent_talk.steps.step0_llm:main"
step1-condition = "agent_talk.steps.step1_condition:main"
step2-tools = "agent_talk.steps.step2_tools:main"
step4-agent = "agent_talk.steps.step4_agent:main"
